update api getAll A1 and update token get, upload image

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,20 @@
+spring.profiles.active=dev
+server.port=8082
 
+#mongodb
+spring.data.mongodb.host=207.148.73.181
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=DLR
+spring.data.mongodb.username=DLR_APP3
+spring.data.mongodb.password=Poiu123a@
+spring.data.mongodb.auto-index-creation=false
+
+# logging
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} %-5level %logger{36} - %msg%n
+logging.level.org.hibernate.SQL=off
+#logging.level.org.hibernate.type.descriptor.sql=trace
+#logging.level.=error
+
+#upload size
+spring.servlet.multipart.max-file-size=200MB
+spring.servlet.multipart.max-request-size=200MB
